samples/_failures_safe/1761606983_e6262c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67f24a63.c: In function ‘parse_operator’:
./samples/SAFE/__tmp_67f24a63.c:158:13: error: expected identifier at end of input
  158 |             lexer->
      |             ^~~~~
./samples/SAFE/__tmp_67f24a63.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67f24a63.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67f24a63.c:158:13: error: expected declaration or statement at end of input
